# objectDetection-API

./: Docker-compose.yaml  Dockerfile  IMG_1895_Original.HEIC  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: models.py  route.py
app/core/utils/: yolov8s.py
