[project]
name = "objectdetection-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "opencv-python>=4.11.0.86",
    "python-multipart>=0.0.20",
    "ultralytics>=8.3.71",
    "uvicorn>=0.34.0",
]
